--- a/index.html
+++ b/index.html
@@ -6,17 +6,40 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="header-container">Corais da Baía de Todos os Santos</header>
+    <header class="header-container"><h1>Corais da Baía de Todos os Santos</h1></header>
     <nav class="nav-bar-container">
         <ul class="nav-bar-itens">
+            <!--add hover to the nav bar itens ("coral" and "outros")-->
             <li><a href="index.html">Início</a></li>
             <li><a href="corais.html">Corais</a></li>
             <li><a href="outros.html">Outros organismos</a></li>
+            <li><a href="recifes.html">Recifes da BTS</a></li>
+            <li><a href="bancos.html">Bancos de grama da BTS</a></li>
             <li><a href="pesquisa.html">Pesquisa</a></li>
             <li><a href="about.hml">Sobre o site</a></li>
-            <!--add a search bar in here-->>
+            <!--add a search bar in here-->
         </ul>
     </nav>
+    <div class="hero-section-container">
+        <div>
+            <h2>Sobre recifes e corais</h2>
+            <p class="hero-text">
+                Os recifes de coral são ecossistemas que abrigam elevada diversidade biológica  e no Brasil estão restritos à região Nordeste, devido a elevada temperatura da água do mar e a sedimentação relativamente baixa, condições ambientais fundamentais para o desenvolvimento e manutenção desses ecossistemas. A principal característica desses ambientes é a presença de organismos bioconstrutores, especialmente os corais, que utilizam o carbonato de cálcio presente na água do mar para o desenvolvimento de sua estrutura. Nos recifes, há uma disputa entre organismos bentônicos sésseis, como algas e corais, pelo substrato, que é um fator limitante para o ecossistema. 
+                Os ecossistemas recifais fornecem diversos serviços ecossistêmicos como a proteção da linha de costa contra erosão causada pela ação das ondas e também são atrativos para o turismo em diversos locais da costa do nordeste brasileiro. incluindo o litoral norte do estado da Bahia. 
+                Os recifes de coral são ecossistemas que abrigam elevada diversidade biológica  e no Brasil estão restritos à região Nordeste, devido a elevada temperatura da água do mar e a sedimentação relativamente baixa, condições ambientais fundamentais para o desenvolvimento e manutenção desses ecossistemas. A principal característica desses ambientes é a presença de organismos bioconstrutores, especialmente os corais, que utilizam o carbonato de cálcio presente na água do mar para o desenvolvimento de sua estrutura. Nos recifes, há uma disputa entre organismos bentônicos sésseis, como algas e corais, pelo substrato, que é um fator limitante para o ecossistema. 
+                Os ecossistemas recifais fornecem diversos serviços ecossistêmicos como a proteção da linha de costa contra erosão causada pela ação das ondas e também são atrativos para o turismo em diversos locais da costa do nordeste brasileiro. incluindo o litoral norte do estado da Bahia. 
+                Os recifes de coral são ecossistemas que abrigam elevada diversidade biológica  e no Brasil estão restritos à região Nordeste, devido a elevada temperatura da água do mar e a sedimentação relativamente baixa, condições ambientais fundamentais para o desenvolvimento e manutenção desses ecossistemas. A principal característica desses ambientes é a presença de organismos bioconstrutores, especialmente os corais, que utilizam o carbonato de cálcio presente na água do mar para o desenvolvimento de sua estrutura. Nos recifes, há uma disputa entre organismos bentônicos sésseis, como algas e corais, pelo substrato, que é um fator limitante para o ecossistema. 
+                Os ecossistemas recifais fornecem diversos serviços ecossistêmicos como a proteção da linha de costa contra erosão causada pela ação das ondas e também são atrativos para o turismo em diversos locais da costa do nordeste brasileiro. incluindo o litoral norte do estado da Bahia. 
+                Os recifes de coral são ecossistemas que abrigam elevada diversidade biológica  e no Brasil estão restritos à região Nordeste, devido a elevada temperatura da água do mar e a sedimentação relativamente baixa, condições ambientais fundamentais para o desenvolvimento e manutenção desses ecossistemas. A principal característica desses ambientes é a presença de organismos bioconstrutores, especialmente os corais, que utilizam o carbonato de cálcio presente na água do mar para o desenvolvimento de sua estrutura. Nos recifes, há uma disputa entre organismos bentônicos sésseis, como algas e corais, pelo substrato, que é um fator limitante para o ecossistema. 
+                Os ecossistemas recifais fornecem diversos serviços ecossistêmicos como a proteção da linha de costa contra erosão causada pela ação das ondas e também são atrativos para o turismo em diversos locais da costa do nordeste brasileiro. incluindo o litoral norte do estado da Bahia. 
+            </p>
+        </div>
+        <div><img src="" alt=""></div>
+
+    </div>
+    <footer>
+        <div>Teste teste teste teste teste teste teste teste teste teste</div>
+    </footer>
     <script src="corais.js"></script>
 </body>
 </html>
