adding hover to the nav bar menu

--- a/index.html
+++ b/index.html
@@ -11,10 +11,44 @@
         <ul class="nav-bar-itens">
             <!--add hover to the nav bar itens ("coral" and "outros")-->
             <li><a href="index.html">Início</a></li>
-            <li><a href="corais.html">Corais</a></li>
-            <li><a href="outros.html">Outros organismos</a></li>
-            <li><a href="recifes.html">Recifes da BTS</a></li>
-            <li><a href="bancos.html">Bancos de grama da BTS</a></li>
+            <li>
+                <div class="dropdown">
+                    <a href="corais.html" class="dropbtn">Corais</a>
+                    <div class="dropdown-content">
+                        <a href="#">Coral 1 </a>
+                        <a href="#">Coral 2</a>
+                        <a href="#">Coral 2</a>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="dropdown">
+                    <a href="outros.html" class="dropbtn">Outros organismos</a>
+                    <div class="dropdown-content">
+                        <a href="">Outros 1</a>
+                        <a href="">Outros 2</a>
+                        <a href="">Outros 3</a>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="dropdown">
+                    <a href="outros.html" class="dropbtn">Recifes da BTS</a>
+                    <div class="dropdown-content">
+                        <a href="">Localização</a>
+                        <a href="">Estado de conservação</a>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="dropdown">
+                    <a href="outros.html" class="dropbtn">Bancos de grama da BTS</a>
+                    <div class="dropdown-content">
+                        <a href="">Localização</a>
+                        <a href="">Estado de conservação</a>
+                    </div>
+                </div>
+            </li>
             <li><a href="pesquisa.html">Pesquisa</a></li>
             <li><a href="about.hml">Sobre o site</a></li>
             <!--add a search bar in here-->
