--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <div class="dropdown">
                     <a href="corais.html" class="dropbtn">Corais</a>
                     <div class="dropdown-content">
-                        <a href="#">Coral 1 </a>
-                        <a href="#">Coral 2</a>
-                        <a href="#">Coral 2</a>
+                        <a href="coral_1.html">Coral 1 </a>
+                        <a href="coral_1.html">Coral 2</a>
+                        <a href="coral_1.html">Coral 2</a>
                     </div>
                 </div>
             </li>
@@ -25,9 +25,9 @@
                 <div class="dropdown">
                     <a href="outros.html" class="dropbtn">Outros organismos</a>
                     <div class="dropdown-content">
-                        <a href="">Outros 1</a>
-                        <a href="">Outros 2</a>
-                        <a href="">Outros 3</a>
+                        <a href="coral_1.html">Outros 1</a>
+                        <a href="coral_1.html">Outros 2</a>
+                        <a href="coral_1.html">Outros 3</a>
                     </div>
                 </div>
             </li>
@@ -57,18 +57,20 @@
     <div class="hero-section-container">
         <div>
             <h2>Sobre recifes e corais</h2>
-            <p class="hero-text">
-                Os recifes de coral são ecossistemas que abrigam elevada diversidade biológica  e no Brasil estão restritos à região Nordeste, devido a elevada temperatura da água do mar e a sedimentação relativamente baixa, condições ambientais fundamentais para o desenvolvimento e manutenção desses ecossistemas. A principal característica desses ambientes é a presença de organismos bioconstrutores, especialmente os corais, que utilizam o carbonato de cálcio presente na água do mar para o desenvolvimento de sua estrutura. Nos recifes, há uma disputa entre organismos bentônicos sésseis, como algas e corais, pelo substrato, que é um fator limitante para o ecossistema. 
-                Os ecossistemas recifais fornecem diversos serviços ecossistêmicos como a proteção da linha de costa contra erosão causada pela ação das ondas e também são atrativos para o turismo em diversos locais da costa do nordeste brasileiro. incluindo o litoral norte do estado da Bahia. 
-                Os recifes de coral são ecossistemas que abrigam elevada diversidade biológica  e no Brasil estão restritos à região Nordeste, devido a elevada temperatura da água do mar e a sedimentação relativamente baixa, condições ambientais fundamentais para o desenvolvimento e manutenção desses ecossistemas. A principal característica desses ambientes é a presença de organismos bioconstrutores, especialmente os corais, que utilizam o carbonato de cálcio presente na água do mar para o desenvolvimento de sua estrutura. Nos recifes, há uma disputa entre organismos bentônicos sésseis, como algas e corais, pelo substrato, que é um fator limitante para o ecossistema. 
-                Os ecossistemas recifais fornecem diversos serviços ecossistêmicos como a proteção da linha de costa contra erosão causada pela ação das ondas e também são atrativos para o turismo em diversos locais da costa do nordeste brasileiro. incluindo o litoral norte do estado da Bahia. 
-                Os recifes de coral são ecossistemas que abrigam elevada diversidade biológica  e no Brasil estão restritos à região Nordeste, devido a elevada temperatura da água do mar e a sedimentação relativamente baixa, condições ambientais fundamentais para o desenvolvimento e manutenção desses ecossistemas. A principal característica desses ambientes é a presença de organismos bioconstrutores, especialmente os corais, que utilizam o carbonato de cálcio presente na água do mar para o desenvolvimento de sua estrutura. Nos recifes, há uma disputa entre organismos bentônicos sésseis, como algas e corais, pelo substrato, que é um fator limitante para o ecossistema. 
-                Os ecossistemas recifais fornecem diversos serviços ecossistêmicos como a proteção da linha de costa contra erosão causada pela ação das ondas e também são atrativos para o turismo em diversos locais da costa do nordeste brasileiro. incluindo o litoral norte do estado da Bahia. 
-                Os recifes de coral são ecossistemas que abrigam elevada diversidade biológica  e no Brasil estão restritos à região Nordeste, devido a elevada temperatura da água do mar e a sedimentação relativamente baixa, condições ambientais fundamentais para o desenvolvimento e manutenção desses ecossistemas. A principal característica desses ambientes é a presença de organismos bioconstrutores, especialmente os corais, que utilizam o carbonato de cálcio presente na água do mar para o desenvolvimento de sua estrutura. Nos recifes, há uma disputa entre organismos bentônicos sésseis, como algas e corais, pelo substrato, que é um fator limitante para o ecossistema. 
-                Os ecossistemas recifais fornecem diversos serviços ecossistêmicos como a proteção da linha de costa contra erosão causada pela ação das ondas e também são atrativos para o turismo em diversos locais da costa do nordeste brasileiro. incluindo o litoral norte do estado da Bahia. 
-            </p>
+            <div class="hero-text">
+                <p>
+                    Os recifes de coral são ecossistemas que abrigam elevada diversidade biológica  e no Brasil estão restritos à região Nordeste, devido a elevada temperatura da água do mar e a sedimentação relativamente baixa, condições ambientais fundamentais para o desenvolvimento e manutenção desses ecossistemas. A principal característica desses ambientes é a presença de organismos bioconstrutores, especialmente os corais, que utilizam o carbonato de cálcio presente na água do mar para o desenvolvimento de sua estrutura. Nos recifes, há uma disputa entre organismos bentônicos sésseis, como algas e corais, pelo substrato, que é um fator limitante para o ecossistema. 
+                    Os ecossistemas recifais fornecem diversos serviços ecossistêmicos como a proteção da linha de costa contra erosão causada pela ação das ondas e também são atrativos para o turismo em diversos locais da costa do nordeste brasileiro. incluindo o litoral norte do estado da Bahia. 
+                    Os recifes de coral são ecossistemas que abrigam elevada diversidade biológica  e no Brasil estão restritos à região Nordeste, devido a elevada temperatura da água do mar e a sedimentação relativamente baixa, condições ambientais fundamentais para o desenvolvimento e manutenção desses ecossistemas. A principal característica desses ambientes é a presença de organismos bioconstrutores, especialmente os corais, que utilizam o carbonato de cálcio presente na água do mar para o desenvolvimento de sua estrutura. Nos recifes, há uma disputa entre organismos bentônicos sésseis, como algas e corais, pelo substrato, que é um fator limitante para o ecossistema. 
+                    Os ecossistemas recifais fornecem diversos serviços ecossistêmicos como a proteção da linha de costa contra erosão causada pela ação das ondas e também são atrativos para o turismo em diversos locais da costa do nordeste brasileiro. incluindo o litoral norte do estado da Bahia. 
+                    Os recifes de coral são ecossistemas que abrigam elevada diversidade biológica  e no Brasil estão restritos à região Nordeste, devido a elevada temperatura da água do mar e a sedimentação relativamente baixa, condições ambientais fundamentais para o desenvolvimento e manutenção desses ecossistemas. A principal característica desses ambientes é a presença de organismos bioconstrutores, especialmente os corais, que utilizam o carbonato de cálcio presente na água do mar para o desenvolvimento de sua estrutura. Nos recifes, há uma disputa entre organismos bentônicos sésseis, como algas e corais, pelo substrato, que é um fator limitante para o ecossistema. 
+                    Os ecossistemas recifais fornecem diversos serviços ecossistêmicos como a proteção da linha de costa contra erosão causada pela ação das ondas e também são atrativos para o turismo em diversos locais da costa do nordeste brasileiro. incluindo o litoral norte do estado da Bahia. 
+                    Os recifes de coral são ecossistemas que abrigam elevada diversidade biológica  e no Brasil estão restritos à região Nordeste, devido a elevada temperatura da água do mar e a sedimentação relativamente baixa, condições ambientais fundamentais para o desenvolvimento e manutenção desses ecossistemas. A principal característica desses ambientes é a presença de organismos bioconstrutores, especialmente os corais, que utilizam o carbonato de cálcio presente na água do mar para o desenvolvimento de sua estrutura. Nos recifes, há uma disputa entre organismos bentônicos sésseis, como algas e corais, pelo substrato, que é um fator limitante para o ecossistema. 
+                    Os ecossistemas recifais fornecem diversos serviços ecossistêmicos como a proteção da linha de costa contra erosão causada pela ação das ondas e também são atrativos para o turismo em diversos locais da costa do nordeste brasileiro. incluindo o litoral norte do estado da Bahia. 
+                </p>
+                <div><img src="IMG_7609.JPG" alt=""></div>
+            </div>
         </div>
-        <div><img src="" alt=""></div>
 
     </div>
     <footer>
