adding error page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li><a href="index.html">Início</a></li>
             <li>
                 <div class="dropdown">
-                    <a href="corais.html" class="dropbtn">Corais</a>
+                    <a href="coral_1.html" class="dropbtn">Corais</a>
                     <div class="dropdown-content">
                         <a href="coral_1.html">Coral 1 </a>
                         <a href="coral_1.html">Coral 2</a>
@@ -23,7 +23,7 @@
             </li>
             <li>
                 <div class="dropdown">
-                    <a href="outros.html" class="dropbtn">Outros organismos</a>
+                    <a href="coral_1.html" class="dropbtn">Outros organismos</a>
                     <div class="dropdown-content">
                         <a href="coral_1.html">Outros 1</a>
                         <a href="coral_1.html">Outros 2</a>
@@ -33,7 +33,7 @@
             </li>
             <li>
                 <div class="dropdown">
-                    <a href="outros.html" class="dropbtn">Recifes da BTS</a>
+                    <a href="coral_1.html" class="dropbtn">Recifes da BTS</a>
                     <div class="dropdown-content">
                         <a href="">Localização</a>
                         <a href="">Estado de conservação</a>
